--- a/footer.html
+++ b/footer.html
@@ -15,6 +15,7 @@
         color: #000;
         padding: 20px;
         text-align: center;
+        box-shadow: 0 -10px 10px -10px rgba(0,0,0,0.5); /* Add shadow to the top */
     }
     .footer-content {
         display: flex;
@@ -26,7 +27,7 @@
         align-items: center;
     }
     .logo img {
-        width: 95px; /* Increase size by 15% */
+        width: 95px;
         height: auto;
         margin-right: 10px;
     }
@@ -48,7 +49,7 @@
     <div class="footer-content">
         <div class="logo">
             <img src="logo.png" alt="Logo">
-            <h3>Rent EZ™</h3> <!-- Added trademark symbol -->
+            <h3>Rent EZ&trade;</h3>
         </div>
         <div class="contact-info">
             <p>Email: info@rentez.com</p>
@@ -57,7 +58,7 @@
         </div>
     </div>
     <div class="footer-text">
-        &copy; 2022 Rent EZ. All rights reserved. <!-- Added copyright symbol -->
+        &copy; 2022 Rent EZ. All rights reserved.
     </div>
 </footer>
 
