--- a/product.html
+++ b/product.html
@@ -5,37 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Product Details</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
     .product-card {
         display: flex;
-        flex-wrap: wrap; /* Allow flex items to wrap */
+        flex-wrap: wrap;
         padding: 20px;
     }
     .product-image {
         border: 1px solid #ccc;
         padding: 10px;
-        width: 150px; /* Set a fixed width for the image */
-        height: auto; /* Maintain aspect ratio */
+        width: 150px;
+        height: auto;
     }
     .product-image img {
-        width: 100%; /* Adjust the width to fill the container */
-        height: auto; /* Maintain aspect ratio */
+        width: 100%;
+        height: auto;
     }
     .product-details {
         flex: 1;
         padding: 0 20px;
         display: flex;
         align-items: center;
-        justify-content: space-between; /* Align items to the right */
+        justify-content: space-between;
     }
     .vertical-line {
         border-left: 1px solid #ccc;
-        height: 100px; /* Adjust height as needed */
-        margin-right: 20px; /* Add margin to separate from the cost details */
+        height: 100px;
+        margin-right: 20px;
     }
     .pickup-details,
     .billing-info {
@@ -57,51 +52,43 @@
         text-align: center;
         text-decoration: none;
     }
-    .card1,
-    .card2,
-    .card3 {
-        flex: 1; /* Occupy the entire width */
+    .product-card1,
+    .product-card2,
+    .product-card3 {
+        flex: 1;
         padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    /* Changes */
-    .card2 {
-        flex: 2; /* Occupy 2/3 of the width */
+    .product-card2 {
+        flex: 2;
     }
-    .card3 {
-        flex: 1; /* Occupy 1/3 of the width */
-        margin-left: 20px; /* Add padding between card2 and card3 */
+    .product-card3 {
+        flex: 1;
+        margin-left: 20px;
     }
 </style>
 </head>
 <body>
-
-<!-- First Code (Top of the page) -->
 <div class="product-card">
-    <div class="card1">
-        <div class="product-details">
-            <div class="product-image">
-                <img src="img.jpg" alt="Product Image">
-            </div>
-            <div class="person-details">
-                <h3>Person Details</h3>
-                <p>Name: John Doe</p>
-                <p>Project: RentEZ</p>
-            </div>
-            <div class="cost-details">
-                <h3>Cost per Duration</h3>
-                <p>$10 per day</p>
-                <p>$50 per week</p>
-                <p>$200 per month</p>
-            </div>
+    <div class="product-card1" style="display: flex; flex-direction: row;">
+        <div class="product-image" style="flex: 20%;">
+            <img src="Logo.png" alt="Product Image">
+        </div>
+        <div class="person-details" style="flex: 55%; padding-left: 2%;">
+            <h3>Product Details</h3>
+            <p>Name: John Doe</p>
+            <p>Product: RentEZ</p>
+        </div>
+        <div class="cost-details" style="flex: 25%;">
+            <h3>Cost per Duration</h3>
+            <p>Rs.10 per day</p>
+            <p>Rs.50 per week</p>
+            <p>Rs.200 per month</p>
         </div>
     </div>
 </div>
-
-<!-- Second and Third Codes (Displayed below the first code in a single line) -->
 <div class="product-card">
-    <!-- Second Code (2/3 of the width) -->
-    <div class="card2">
+    <div class="product-card2">
         <div class="pickup-details">
             <h3>Pickup Address</h3>
             <p>123 Main Street, City, Country</p>
@@ -113,8 +100,7 @@
             <p>Sunday: Closed</p>
         </div>
     </div>
-    <!-- Third Code (1/3 of the width) -->
-    <div class="card3">
+    <div class="product-card3">
         <div class="billing-info">
             <h3>Billing Information</h3>
             <p>Total Amount: $200</p>
